Adding readOnly permissions for broker to sources.

--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -86,3 +86,10 @@ rules:
   resources:
   - events
   verbs: *everything
+
+# Brokers read
+- apiGroups:
+  - eventing.knative.dev
+  resources:
+  - brokers
+  verbs: *readOnly
