Adding dependency to eventing back for namespaced EventTypes. Creating them on Source reconciler. Could be done on the CO.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -98,3 +98,9 @@ required = [
 [[override]]
   name = "github.com/cloudevents/sdk-go"
   revision = "d50361a5655081514f406b4e672d72e9886c17ad"
+
+# Dependency on Registry
+[[constraint]]
+  name = "github.com/knative/eventing"
+  source = "github.com/nachocano/eventing"
+  branch = "registry-namespace"
