--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -95,3 +95,10 @@ rules:
   resources:
   - brokers
   verbs: *readOnly
+
+  # EventTypes admin
+- apiGroups:
+    - eventing.knative.dev
+  resources:
+    - eventtypes
+  verbs: *everything
