Watching CRDs, will look at namespaces changes there, and see if we need to create the event types...

--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -96,9 +96,23 @@ rules:
   - brokers
   verbs: *readOnly
 
-  # EventTypes admin
+# EventTypes admin
 - apiGroups:
-    - eventing.knative.dev
+  - eventing.knative.dev
   resources:
-    - eventtypes
+  - eventtypes
   verbs: *everything
+
+# CRDs read
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs: *readOnly
+
+# Namespace read
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs: *readOnly
