creating the eventType at the CR level. prototype for bitbucket. Removing namespace reconciler

--- a/contrib/bitbucket/config/201-clusterrole.yaml
+++ b/contrib/bitbucket/config/201-clusterrole.yaml
@@ -52,6 +52,11 @@ rules:
       - list
       - watch
   - apiGroups:
+      - eventing.knative.dev
+    resources:
+      - eventtypes
+    verbs: *everything
+  - apiGroups:
       - serving.knative.dev
     resources:
       - services
