--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -107,4 +107,5 @@ required = [
 [[constraint]]
   name = "github.com/knative/eventing"
   source = "github.com/nachocano/eventing"
-  branch = "registry-namespace"
+  # branch = "registry-namespace"
+  revision = "3b6ed5d3b5e0a1ddaffcd6756a8d2e9338685a77"
