Adding trigger permission

--- a/contrib/gcppubsub/config/201-clusterrole.yaml
+++ b/contrib/gcppubsub/config/201-clusterrole.yaml
@@ -62,3 +62,9 @@ rules:
   resources:
   - eventtypes
   verbs: *everything
+
+- apiGroups:
+    - eventing.knative.dev
+  resources:
+    - triggers
+  verbs: *readOnly
