--- a/contrib/github/config/300-githubsource.yaml
+++ b/contrib/github/config/300-githubsource.yaml
@@ -50,50 +50,75 @@ spec:
                   type: object
               type: object
             eventTypes:
+              items:
+                enum:
+                  - check_suite
+                  - commit_comment
+                  - create
+                  - delete
+                  - deployment
+                  - deployment_status
+                  - fork
+                  - gollum
+                  - installation
+                  - integration_installation
+                  - issue_comment
+                  - issues
+                  - label
+                  - member
+                  - membership
+                  - milestone
+                  - organization
+                  - org_block
+                  - page_build
+                  - ping
+                  - project_card
+                  - project_column
+                  - project
+                  - public
+                  - pull_request
+                  - pull_request_review
+                  - pull_request_review_comment
+                  - push
+                  - release
+                  - repository
+                  - status
+                  - team
+                  - team_add
+                  - watch
+                type: string
+              minItems: 1
+              type: array
+            ___eventTypes:
               type: object
               properties:
-                pullRequest:
+                pull_request:
                   type: object
                   properties:
-                    ceType:
+                    type:
                       type: string
-                      # Defaulting is enabled since k8s 1.15, enabling the CustomResourceDefaulting feature gate
-                      # See: https://kubernetes.io/docs/tasks/access-kubernetes-api/custom-resources/custom-resource-definitions/#defaulting
-                      # default: "dev.knative.source.github.pull_request"
-                      # Will need a webhook for setting up defaults in importers if not.
                       pattern: "dev.knative.source.github.pull_request"
-                  required:
-                    - ceType
+                    schema:
+                      type: string
+                      pattern: "pull_request-schema"
                 push:
                   type: object
                   properties:
-                    ceType:
+                    type:
                       type: string
                       pattern: "dev.knative.source.github.push"
-                  # additionalProperties:
-                    onlyForPush:
+                    schema:
                       type: string
-                      description: "Some push specific property"
-                  required:
-                    - ceType
-                    - onlyForPush
+                      pattern: "push-schema"
                 fork:
                   type: object
                   properties:
-                    ceType:
+                    type:
                       type: string
                       pattern: "dev.knative.source.github.fork"
-                  # additionalProperties:
-                    onlyForFork:
+                    schema:
                       type: string
-                      description: "Some fork specific property"
-                    anotherOneForFork:
-                      type: string
-                      description: "Some other one fork specific property"
-                  required:
-                    - ceType
-                    - onlyForFork
-                    - anotherOneForFork
+                      pattern: "fork-schema"
             ownerAndRepository:
               minLength: 1
               type: string
