--- a/container/config/500-webhook.yaml
+++ b/container/config/500-webhook.yaml
@@ -35,14 +35,14 @@ spec:
       containers:
       - name: containersource-webhook
         terminationMessagePolicy: FallbackToLogsOnError
-        image: knative.dev/eventing-contrib/container/cmd/webhook
+        image: ko://knative.dev/eventing-contrib/container/cmd/webhook
         env:
           - name: SYSTEM_NAMESPACE
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
           - name: CONFIG_LOGGING_NAME
-            value: config-logging
+            value: config-logging-containersource
           - name: METRICS_DOMAIN
             value: knative.dev/sources
           - name: WEBHOOK_NAME
